# dataset_studio

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.sessions/: current_session.json  sess_20260416_032817_9038af.json
apps/web/: main.py
src/dataset_studio/services/: dataset_service.py  embedding_export_service.py  merge_service.py  session_service.py
src/dataset_studio/web/: app.py  deps.py  models.py
src/dataset_studio/web/routers/: datasets.py
web/static/: app.js  styles.css
web/templates/: index.html
